# ml_intro_2

0_prerequisites/: README.md
1_data_manipulations/: README.md
2_data_exploration/: README.md
3_linear_regression/: README.md
5_classification_linear_knn/: README.md  hw_classification.ipynb
6_feature_engineering_selection/: README.md
7_trees_and_ensembles/: rf_classifier.ipynb
9_evaluation_selection/: HOMEWORK.md  README.md
9_evaluation_selection/forest_project/: .gitignore  .pre-commit-config.yaml  README.rst  config.ini  noxfile.py  pyproject.toml
9_evaluation_selection/forest_project/src/forest_project/: config.py  cv.py  data.py  model.py  pandas.py  pandas_profile.py  pandas_profiling.py  pipeline.py  preprocess_data.py  score.py  train.py
9_evaluation_selection/forest_project/tests/: test_forest_project.py  test_train.py
