[tool.poetry]
name = "forest_project"
version = "0.1.0"
description = ""
authors = ["Alena Chechun <achechun@gmail.com>"]

[tool.poetry.scripts]
pandas = "forest_project.pandas:pandas"
train = "forest_project.train:train"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
mlflow = "^1.25.1"
pandas-profiling = "^3.2.0"
sklearn = "^0.0"
pathlib = "^1.0.1"
configparser = "^5.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
